# fake-review-detection

./: .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SETUP_DATABASE.md  config.example.py  create_sample_database.py  data  main.py  pyproject.toml  requirements.txt  setup.py
notebooks/: .gitkeep
src/fake_review_detection/: __init__.py  data_loader.py  data_processor.py  feature_engineer.py  main.py  models.py  utils.py
tests/: __init__.py  test_data_processor.py
